--- a/uber.html
+++ b/uber.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="ubercss.css">
 </head>
 <body> 
-    <nav class="navbar">
+    <nav class="navbar2">
         <ul style="justify-content: space-between;">
             <li><a href="#" class="">Uber</a></li>
             <li><a href="#" class="">Company ⌄</a></li>
