--- a/uber.html
+++ b/uber.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="styleshee" type="text/css" href="ubercss.css">
+    <link rel="stylesheet" type="text/css" href="ubercss.css">
 </head>
 <body> 
-    <nav class="navbar2">
+    <nav class="navbar">
         <ul style="justify-content: space-between;">
             <li><a href="#" class="">Uber</a></li>
             <li><a href="#" class="">Company ⌄</a></li>
